--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,15 +165,12 @@
        "      <th>pt_j1</th>\n",
        "      <th>pt_j2</th>\n",
        "      <th>pt_ll</th>\n",
-       "      <th>MET</th>\n",
        "      <th>eta_l1</th>\n",
        "      <th>eta_l2</th>\n",
        "      <th>eta_j1</th>\n",
        "      <th>eta_j2</th>\n",
        "      <th>delta_eta_jj</th>\n",
-       "      <th>A</th>\n",
        "      <th>delta_phi_jj</th>\n",
-       "      <th>B</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -186,15 +183,12 @@
        "      <td>79.861451</td>\n",
        "      <td>114.119794</td>\n",
        "      <td>116.217132</td>\n",
-       "      <td>2.700006e-09</td>\n",
        "      <td>1.229191</td>\n",
        "      <td>1.006156</td>\n",
        "      <td>3.575737</td>\n",
        "      <td>-0.300728</td>\n",
        "      <td>3.876465</td>\n",
-       "      <td>3.176781</td>\n",
        "      <td>-1.900115</td>\n",
-       "      <td>-1.896241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -205,15 +199,12 @@
        "      <td>208.670392</td>\n",
        "      <td>330.818190</td>\n",
        "      <td>145.454612</td>\n",
-       "      <td>9.219584e-09</td>\n",
        "      <td>0.829505</td>\n",
        "      <td>1.967168</td>\n",
        "      <td>2.528491</td>\n",
        "      <td>-1.890051</td>\n",
        "      <td>4.418542</td>\n",
-       "      <td>1.237169</td>\n",
        "      <td>-2.839869</td>\n",
-       "      <td>0.223456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -224,15 +215,12 @@
        "      <td>94.105585</td>\n",
        "      <td>64.554857</td>\n",
        "      <td>85.313150</td>\n",
-       "      <td>1.464821e-14</td>\n",
        "      <td>-0.216607</td>\n",
        "      <td>-0.199792</td>\n",
        "      <td>-1.593260</td>\n",
        "      <td>4.113683</td>\n",
        "      <td>-5.706943</td>\n",
-       "      <td>3.715929</td>\n",
        "      <td>2.063296</td>\n",
-       "      <td>-1.645788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -243,15 +231,12 @@
        "      <td>233.302256</td>\n",
        "      <td>268.592720</td>\n",
        "      <td>104.814634</td>\n",
-       "      <td>4.900022e-09</td>\n",
        "      <td>1.747504</td>\n",
        "      <td>0.111492</td>\n",
        "      <td>2.229235</td>\n",
        "      <td>0.346242</td>\n",
        "      <td>1.882993</td>\n",
-       "      <td>3.104580</td>\n",
        "      <td>2.744728</td>\n",
-       "      <td>1.216032</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -262,15 +247,12 @@
        "      <td>172.316059</td>\n",
        "      <td>118.034701</td>\n",
        "      <td>93.485945</td>\n",
-       "      <td>4.472133e-09</td>\n",
        "      <td>0.126138</td>\n",
        "      <td>1.033327</td>\n",
        "      <td>-0.842621</td>\n",
        "      <td>1.687083</td>\n",
        "      <td>-2.529704</td>\n",
-       "      <td>1.222688</td>\n",
        "      <td>2.601356</td>\n",
-       "      <td>1.676753</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -284,22 +266,22 @@
        "3  92.805405   732.812606   90.881102   22.378353  233.302256  268.592720   \n",
        "4  89.975393   540.147829   68.022582   49.693719  172.316059  118.034701   \n",
        "\n",
-       "        pt_ll           MET    eta_l1    eta_l2    eta_j1    eta_j2  \\\n",
-       "0  116.217132  2.700006e-09  1.229191  1.006156  3.575737 -0.300728   \n",
-       "1  145.454612  9.219584e-09  0.829505  1.967168  2.528491 -1.890051   \n",
-       "2   85.313150  1.464821e-14 -0.216607 -0.199792 -1.593260  4.113683   \n",
-       "3  104.814634  4.900022e-09  1.747504  0.111492  2.229235  0.346242   \n",
-       "4   93.485945  4.472133e-09  0.126138  1.033327 -0.842621  1.687083   \n",
+       "        pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
+       "0  116.217132  1.229191  1.006156  3.575737 -0.300728      3.876465   \n",
+       "1  145.454612  0.829505  1.967168  2.528491 -1.890051      4.418542   \n",
+       "2   85.313150 -0.216607 -0.199792 -1.593260  4.113683     -5.706943   \n",
+       "3  104.814634  1.747504  0.111492  2.229235  0.346242      1.882993   \n",
+       "4   93.485945  0.126138  1.033327 -0.842621  1.687083     -2.529704   \n",
        "\n",
-       "   delta_eta_jj         A  delta_phi_jj         B  \n",
-       "0      3.876465  3.176781     -1.900115 -1.896241  \n",
-       "1      4.418542  1.237169     -2.839869  0.223456  \n",
-       "2     -5.706943  3.715929      2.063296 -1.645788  \n",
-       "3      1.882993  3.104580      2.744728  1.216032  \n",
-       "4     -2.529704  1.222688      2.601356  1.676753  "
+       "   delta_phi_jj  \n",
+       "0     -1.900115  \n",
+       "1     -2.839869  \n",
+       "2      2.063296  \n",
+       "3      2.744728  \n",
+       "4      2.601356  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,19 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.108816572399535e-08\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(dataset[\"MET\"].max())"
+    "dataset.to_csv(\"./data/SM_10k.csv\", index=False)"
    ]
   }
  ],
