comparing sm and bsm with ae

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of events: 100000\n"
+      "Number of events: 10000\n"
      ]
     }
    ],
    "source": [
-    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-SM/Events/run_02/unweighted_events.lhe.gz\"\n",
+    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-cW-2/Events/run_01/unweighted_events.lhe.gz\"\n",
     "events = pylhe.read_lhe_with_attributes(lhe_file)\n",
     "nevents = pylhe.read_num_events(lhe_file)\n",
     "print(f\"Number of events: {nevents}\")"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -176,112 +176,112 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>91.915108</td>\n",
-       "      <td>817.571428</td>\n",
-       "      <td>19.068266</td>\n",
-       "      <td>119.288002</td>\n",
-       "      <td>47.787994</td>\n",
-       "      <td>174.241717</td>\n",
-       "      <td>127.214313</td>\n",
-       "      <td>0.601289</td>\n",
-       "      <td>-0.827524</td>\n",
-       "      <td>-3.112653</td>\n",
-       "      <td>1.247709</td>\n",
-       "      <td>-4.360361</td>\n",
-       "      <td>-3.293960</td>\n",
+       "      <td>226.393438</td>\n",
+       "      <td>1193.405290</td>\n",
+       "      <td>111.980931</td>\n",
+       "      <td>988.699367</td>\n",
+       "      <td>1023.478769</td>\n",
+       "      <td>199.066110</td>\n",
+       "      <td>1095.085498</td>\n",
+       "      <td>-0.369683</td>\n",
+       "      <td>0.215219</td>\n",
+       "      <td>0.880640</td>\n",
+       "      <td>-1.121572</td>\n",
+       "      <td>2.002212</td>\n",
+       "      <td>1.292158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>91.554900</td>\n",
-       "      <td>2404.014354</td>\n",
-       "      <td>48.863130</td>\n",
-       "      <td>87.367985</td>\n",
-       "      <td>107.964679</td>\n",
-       "      <td>177.910879</td>\n",
-       "      <td>106.054348</td>\n",
-       "      <td>-0.455842</td>\n",
-       "      <td>0.039917</td>\n",
-       "      <td>3.143773</td>\n",
-       "      <td>-2.557357</td>\n",
-       "      <td>5.701129</td>\n",
-       "      <td>-3.725031</td>\n",
+       "      <td>102.200589</td>\n",
+       "      <td>683.618664</td>\n",
+       "      <td>56.477553</td>\n",
+       "      <td>174.626744</td>\n",
+       "      <td>231.541112</td>\n",
+       "      <td>42.440512</td>\n",
+       "      <td>230.592560</td>\n",
+       "      <td>1.497241</td>\n",
+       "      <td>0.519281</td>\n",
+       "      <td>0.562082</td>\n",
+       "      <td>4.418771</td>\n",
+       "      <td>-3.856689</td>\n",
+       "      <td>-1.684997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>91.987715</td>\n",
-       "      <td>662.842055</td>\n",
-       "      <td>26.142133</td>\n",
-       "      <td>128.186262</td>\n",
-       "      <td>99.888379</td>\n",
-       "      <td>107.257538</td>\n",
-       "      <td>127.337882</td>\n",
-       "      <td>2.250787</td>\n",
-       "      <td>1.749627</td>\n",
-       "      <td>1.845531</td>\n",
-       "      <td>-1.855586</td>\n",
-       "      <td>3.701117</td>\n",
-       "      <td>-1.819143</td>\n",
+       "      <td>97.522113</td>\n",
+       "      <td>738.529889</td>\n",
+       "      <td>781.796595</td>\n",
+       "      <td>33.783846</td>\n",
+       "      <td>802.819856</td>\n",
+       "      <td>56.877340</td>\n",
+       "      <td>813.224539</td>\n",
+       "      <td>0.301413</td>\n",
+       "      <td>0.760824</td>\n",
+       "      <td>-0.363627</td>\n",
+       "      <td>-2.861775</td>\n",
+       "      <td>2.498148</td>\n",
+       "      <td>-4.861636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>91.241031</td>\n",
-       "      <td>1242.649786</td>\n",
-       "      <td>88.205101</td>\n",
-       "      <td>27.274699</td>\n",
-       "      <td>213.088461</td>\n",
-       "      <td>244.515221</td>\n",
-       "      <td>72.516153</td>\n",
-       "      <td>0.011753</td>\n",
-       "      <td>0.331417</td>\n",
-       "      <td>1.069279</td>\n",
-       "      <td>-2.251527</td>\n",
-       "      <td>3.320807</td>\n",
-       "      <td>2.854300</td>\n",
+       "      <td>93.579285</td>\n",
+       "      <td>582.739226</td>\n",
+       "      <td>100.955526</td>\n",
+       "      <td>146.874370</td>\n",
+       "      <td>204.684022</td>\n",
+       "      <td>41.492955</td>\n",
+       "      <td>232.836333</td>\n",
+       "      <td>-1.400548</td>\n",
+       "      <td>-1.722492</td>\n",
+       "      <td>0.583531</td>\n",
+       "      <td>-3.135093</td>\n",
+       "      <td>3.718624</td>\n",
+       "      <td>-0.897220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>92.039306</td>\n",
-       "      <td>487.140632</td>\n",
-       "      <td>43.624652</td>\n",
-       "      <td>59.307830</td>\n",
-       "      <td>116.027217</td>\n",
-       "      <td>164.351151</td>\n",
-       "      <td>48.557695</td>\n",
-       "      <td>-0.791976</td>\n",
-       "      <td>-1.091582</td>\n",
-       "      <td>3.552877</td>\n",
-       "      <td>1.215985</td>\n",
-       "      <td>2.336892</td>\n",
-       "      <td>-3.176056</td>\n",
+       "      <td>91.844733</td>\n",
+       "      <td>476.403192</td>\n",
+       "      <td>301.006567</td>\n",
+       "      <td>68.186255</td>\n",
+       "      <td>330.692616</td>\n",
+       "      <td>57.448325</td>\n",
+       "      <td>359.027439</td>\n",
+       "      <td>1.455244</td>\n",
+       "      <td>1.231388</td>\n",
+       "      <td>-0.007349</td>\n",
+       "      <td>2.536069</td>\n",
+       "      <td>-2.543417</td>\n",
+       "      <td>1.129079</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        m_ll         m_jj      pt_l1       pt_l2       pt_j1       pt_j2  \\\n",
-       "0  91.915108   817.571428  19.068266  119.288002   47.787994  174.241717   \n",
-       "1  91.554900  2404.014354  48.863130   87.367985  107.964679  177.910879   \n",
-       "2  91.987715   662.842055  26.142133  128.186262   99.888379  107.257538   \n",
-       "3  91.241031  1242.649786  88.205101   27.274699  213.088461  244.515221   \n",
-       "4  92.039306   487.140632  43.624652   59.307830  116.027217  164.351151   \n",
+       "         m_ll         m_jj       pt_l1       pt_l2        pt_j1       pt_j2  \\\n",
+       "0  226.393438  1193.405290  111.980931  988.699367  1023.478769  199.066110   \n",
+       "1  102.200589   683.618664   56.477553  174.626744   231.541112   42.440512   \n",
+       "2   97.522113   738.529889  781.796595   33.783846   802.819856   56.877340   \n",
+       "3   93.579285   582.739226  100.955526  146.874370   204.684022   41.492955   \n",
+       "4   91.844733   476.403192  301.006567   68.186255   330.692616   57.448325   \n",
        "\n",
-       "        pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
-       "0  127.214313  0.601289 -0.827524 -3.112653  1.247709     -4.360361   \n",
-       "1  106.054348 -0.455842  0.039917  3.143773 -2.557357      5.701129   \n",
-       "2  127.337882  2.250787  1.749627  1.845531 -1.855586      3.701117   \n",
-       "3   72.516153  0.011753  0.331417  1.069279 -2.251527      3.320807   \n",
-       "4   48.557695 -0.791976 -1.091582  3.552877  1.215985      2.336892   \n",
+       "         pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
+       "0  1095.085498 -0.369683  0.215219  0.880640 -1.121572      2.002212   \n",
+       "1   230.592560  1.497241  0.519281  0.562082  4.418771     -3.856689   \n",
+       "2   813.224539  0.301413  0.760824 -0.363627 -2.861775      2.498148   \n",
+       "3   232.836333 -1.400548 -1.722492  0.583531 -3.135093      3.718624   \n",
+       "4   359.027439  1.455244  1.231388 -0.007349  2.536069     -2.543417   \n",
        "\n",
        "   delta_phi_jj  \n",
-       "0     -3.293960  \n",
-       "1     -3.725031  \n",
-       "2     -1.819143  \n",
-       "3      2.854300  \n",
-       "4     -3.176056  "
+       "0      1.292158  \n",
+       "1     -1.684997  \n",
+       "2     -4.861636  \n",
+       "3     -0.897220  \n",
+       "4      1.129079  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,11 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv(\"./data/SM_100k.csv\", index=False)"
+    "dataset.to_csv(\"./data/cW_2_10k.csv\", index=False)"
    ]
   }
  ],
