started to fine tune parameters, some work on chi2

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-cW-2/Events/run_01/unweighted_events.lhe.gz\"\n",
+    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-SM/Events/run_01/unweighted_events.lhe.gz\"\n",
     "events = pylhe.read_lhe_with_attributes(lhe_file)\n",
     "nevents = pylhe.read_num_events(lhe_file)\n",
     "print(f\"Number of events: {nevents}\")"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +128,14 @@
     "        \"eta_j2\": quarks_4m[:, 1].eta,\n",
     "        \"delta_eta_jj\": quarks_4m[:, 0].eta - quarks_4m[:, 1].eta,\n",
     "        \"delta_phi_jj\": quarks_4m[:, 0].phi - quarks_4m[:, 1].phi,\n",
+    "        \"cross_section_weight\": cross_section_weight,\n",
     "    }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -171,117 +172,123 @@
        "      <th>eta_j2</th>\n",
        "      <th>delta_eta_jj</th>\n",
        "      <th>delta_phi_jj</th>\n",
+       "      <th>cross_section_weight</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>226.393438</td>\n",
-       "      <td>1193.405290</td>\n",
-       "      <td>111.980931</td>\n",
-       "      <td>988.699367</td>\n",
-       "      <td>1023.478769</td>\n",
-       "      <td>199.066110</td>\n",
-       "      <td>1095.085498</td>\n",
-       "      <td>-0.369683</td>\n",
-       "      <td>0.215219</td>\n",
-       "      <td>0.880640</td>\n",
-       "      <td>-1.121572</td>\n",
-       "      <td>2.002212</td>\n",
-       "      <td>1.292158</td>\n",
+       "      <td>91.635210</td>\n",
+       "      <td>667.722780</td>\n",
+       "      <td>76.915838</td>\n",
+       "      <td>70.168638</td>\n",
+       "      <td>79.861451</td>\n",
+       "      <td>114.119794</td>\n",
+       "      <td>116.217132</td>\n",
+       "      <td>1.229191</td>\n",
+       "      <td>1.006156</td>\n",
+       "      <td>3.575737</td>\n",
+       "      <td>-0.300728</td>\n",
+       "      <td>3.876465</td>\n",
+       "      <td>-1.900115</td>\n",
+       "      <td>0.525908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>102.200589</td>\n",
-       "      <td>683.618664</td>\n",
-       "      <td>56.477553</td>\n",
-       "      <td>174.626744</td>\n",
-       "      <td>231.541112</td>\n",
-       "      <td>42.440512</td>\n",
-       "      <td>230.592560</td>\n",
-       "      <td>1.497241</td>\n",
-       "      <td>0.519281</td>\n",
-       "      <td>0.562082</td>\n",
-       "      <td>4.418771</td>\n",
-       "      <td>-3.856689</td>\n",
-       "      <td>-1.684997</td>\n",
+       "      <td>96.278517</td>\n",
+       "      <td>2420.868329</td>\n",
+       "      <td>122.669099</td>\n",
+       "      <td>33.745498</td>\n",
+       "      <td>208.670392</td>\n",
+       "      <td>330.818190</td>\n",
+       "      <td>145.454612</td>\n",
+       "      <td>0.829505</td>\n",
+       "      <td>1.967168</td>\n",
+       "      <td>2.528491</td>\n",
+       "      <td>-1.890051</td>\n",
+       "      <td>4.418542</td>\n",
+       "      <td>-2.839869</td>\n",
+       "      <td>0.525908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>97.522113</td>\n",
-       "      <td>738.529889</td>\n",
-       "      <td>781.796595</td>\n",
-       "      <td>33.783846</td>\n",
-       "      <td>802.819856</td>\n",
-       "      <td>56.877340</td>\n",
-       "      <td>813.224539</td>\n",
-       "      <td>0.301413</td>\n",
-       "      <td>0.760824</td>\n",
-       "      <td>-0.363627</td>\n",
-       "      <td>-2.861775</td>\n",
-       "      <td>2.498148</td>\n",
-       "      <td>-4.861636</td>\n",
+       "      <td>93.136842</td>\n",
+       "      <td>1354.262005</td>\n",
+       "      <td>24.359742</td>\n",
+       "      <td>101.941891</td>\n",
+       "      <td>94.105585</td>\n",
+       "      <td>64.554857</td>\n",
+       "      <td>85.313150</td>\n",
+       "      <td>-0.216607</td>\n",
+       "      <td>-0.199792</td>\n",
+       "      <td>-1.593260</td>\n",
+       "      <td>4.113683</td>\n",
+       "      <td>-5.706943</td>\n",
+       "      <td>2.063296</td>\n",
+       "      <td>0.525908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>93.579285</td>\n",
-       "      <td>582.739226</td>\n",
-       "      <td>100.955526</td>\n",
-       "      <td>146.874370</td>\n",
-       "      <td>204.684022</td>\n",
-       "      <td>41.492955</td>\n",
-       "      <td>232.836333</td>\n",
-       "      <td>-1.400548</td>\n",
-       "      <td>-1.722492</td>\n",
-       "      <td>0.583531</td>\n",
-       "      <td>-3.135093</td>\n",
-       "      <td>3.718624</td>\n",
-       "      <td>-0.897220</td>\n",
+       "      <td>92.805405</td>\n",
+       "      <td>732.812606</td>\n",
+       "      <td>90.881102</td>\n",
+       "      <td>22.378353</td>\n",
+       "      <td>233.302256</td>\n",
+       "      <td>268.592720</td>\n",
+       "      <td>104.814634</td>\n",
+       "      <td>1.747504</td>\n",
+       "      <td>0.111492</td>\n",
+       "      <td>2.229235</td>\n",
+       "      <td>0.346242</td>\n",
+       "      <td>1.882993</td>\n",
+       "      <td>2.744728</td>\n",
+       "      <td>0.525908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>91.844733</td>\n",
-       "      <td>476.403192</td>\n",
-       "      <td>301.006567</td>\n",
-       "      <td>68.186255</td>\n",
-       "      <td>330.692616</td>\n",
-       "      <td>57.448325</td>\n",
-       "      <td>359.027439</td>\n",
-       "      <td>1.455244</td>\n",
-       "      <td>1.231388</td>\n",
-       "      <td>-0.007349</td>\n",
-       "      <td>2.536069</td>\n",
-       "      <td>-2.543417</td>\n",
-       "      <td>1.129079</td>\n",
+       "      <td>89.975393</td>\n",
+       "      <td>540.147829</td>\n",
+       "      <td>68.022582</td>\n",
+       "      <td>49.693719</td>\n",
+       "      <td>172.316059</td>\n",
+       "      <td>118.034701</td>\n",
+       "      <td>93.485945</td>\n",
+       "      <td>0.126138</td>\n",
+       "      <td>1.033327</td>\n",
+       "      <td>-0.842621</td>\n",
+       "      <td>1.687083</td>\n",
+       "      <td>-2.529704</td>\n",
+       "      <td>2.601356</td>\n",
+       "      <td>0.525908</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         m_ll         m_jj       pt_l1       pt_l2        pt_j1       pt_j2  \\\n",
-       "0  226.393438  1193.405290  111.980931  988.699367  1023.478769  199.066110   \n",
-       "1  102.200589   683.618664   56.477553  174.626744   231.541112   42.440512   \n",
-       "2   97.522113   738.529889  781.796595   33.783846   802.819856   56.877340   \n",
-       "3   93.579285   582.739226  100.955526  146.874370   204.684022   41.492955   \n",
-       "4   91.844733   476.403192  301.006567   68.186255   330.692616   57.448325   \n",
+       "        m_ll         m_jj       pt_l1       pt_l2       pt_j1       pt_j2  \\\n",
+       "0  91.635210   667.722780   76.915838   70.168638   79.861451  114.119794   \n",
+       "1  96.278517  2420.868329  122.669099   33.745498  208.670392  330.818190   \n",
+       "2  93.136842  1354.262005   24.359742  101.941891   94.105585   64.554857   \n",
+       "3  92.805405   732.812606   90.881102   22.378353  233.302256  268.592720   \n",
+       "4  89.975393   540.147829   68.022582   49.693719  172.316059  118.034701   \n",
        "\n",
-       "         pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
-       "0  1095.085498 -0.369683  0.215219  0.880640 -1.121572      2.002212   \n",
-       "1   230.592560  1.497241  0.519281  0.562082  4.418771     -3.856689   \n",
-       "2   813.224539  0.301413  0.760824 -0.363627 -2.861775      2.498148   \n",
-       "3   232.836333 -1.400548 -1.722492  0.583531 -3.135093      3.718624   \n",
-       "4   359.027439  1.455244  1.231388 -0.007349  2.536069     -2.543417   \n",
+       "        pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
+       "0  116.217132  1.229191  1.006156  3.575737 -0.300728      3.876465   \n",
+       "1  145.454612  0.829505  1.967168  2.528491 -1.890051      4.418542   \n",
+       "2   85.313150 -0.216607 -0.199792 -1.593260  4.113683     -5.706943   \n",
+       "3  104.814634  1.747504  0.111492  2.229235  0.346242      1.882993   \n",
+       "4   93.485945  0.126138  1.033327 -0.842621  1.687083     -2.529704   \n",
        "\n",
-       "   delta_phi_jj  \n",
-       "0      1.292158  \n",
-       "1     -1.684997  \n",
-       "2     -4.861636  \n",
-       "3     -0.897220  \n",
-       "4      1.129079  "
+       "   delta_phi_jj  cross_section_weight  \n",
+       "0     -1.900115              0.525908  \n",
+       "1     -2.839869              0.525908  \n",
+       "2      2.063296              0.525908  \n",
+       "3      2.744728              0.525908  \n",
+       "4      2.601356              0.525908  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv(\"./data/cW_2_10k.csv\", index=False)"
+    "dataset.to_csv(\"./data/SM_10k.csv\", index=False)"
    ]
   }
  ],
