finishing the project, generating graphs

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-SM/Events/run_01/unweighted_events.lhe.gz\"\n",
+    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-cHDD-1/Events/run_01/unweighted_events.lhe.gz\"\n",
     "events = pylhe.read_lhe_with_attributes(lhe_file)\n",
     "nevents = pylhe.read_num_events(lhe_file)\n",
     "print(f\"Number of events: {nevents}\")"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -178,88 +178,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>91.635210</td>\n",
-       "      <td>667.722780</td>\n",
-       "      <td>76.915838</td>\n",
-       "      <td>70.168638</td>\n",
-       "      <td>79.861451</td>\n",
-       "      <td>114.119794</td>\n",
-       "      <td>116.217132</td>\n",
-       "      <td>1.229191</td>\n",
-       "      <td>1.006156</td>\n",
-       "      <td>3.575737</td>\n",
-       "      <td>-0.300728</td>\n",
-       "      <td>3.876465</td>\n",
-       "      <td>-1.900115</td>\n",
-       "      <td>0.525908</td>\n",
+       "      <td>97.301623</td>\n",
+       "      <td>943.361573</td>\n",
+       "      <td>108.569643</td>\n",
+       "      <td>20.778174</td>\n",
+       "      <td>75.506760</td>\n",
+       "      <td>44.107703</td>\n",
+       "      <td>90.782239</td>\n",
+       "      <td>0.795077</td>\n",
+       "      <td>1.442213</td>\n",
+       "      <td>3.308059</td>\n",
+       "      <td>-2.280637</td>\n",
+       "      <td>5.588697</td>\n",
+       "      <td>1.481401</td>\n",
+       "      <td>0.10225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>96.278517</td>\n",
-       "      <td>2420.868329</td>\n",
-       "      <td>122.669099</td>\n",
-       "      <td>33.745498</td>\n",
-       "      <td>208.670392</td>\n",
-       "      <td>330.818190</td>\n",
-       "      <td>145.454612</td>\n",
-       "      <td>0.829505</td>\n",
-       "      <td>1.967168</td>\n",
-       "      <td>2.528491</td>\n",
-       "      <td>-1.890051</td>\n",
-       "      <td>4.418542</td>\n",
-       "      <td>-2.839869</td>\n",
-       "      <td>0.525908</td>\n",
+       "      <td>90.418983</td>\n",
+       "      <td>2289.163457</td>\n",
+       "      <td>54.811763</td>\n",
+       "      <td>69.057975</td>\n",
+       "      <td>68.944994</td>\n",
+       "      <td>83.776263</td>\n",
+       "      <td>87.922188</td>\n",
+       "      <td>-0.366088</td>\n",
+       "      <td>0.016954</td>\n",
+       "      <td>-2.883546</td>\n",
+       "      <td>3.926106</td>\n",
+       "      <td>-6.809652</td>\n",
+       "      <td>-1.928219</td>\n",
+       "      <td>0.10225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>93.136842</td>\n",
-       "      <td>1354.262005</td>\n",
-       "      <td>24.359742</td>\n",
-       "      <td>101.941891</td>\n",
-       "      <td>94.105585</td>\n",
-       "      <td>64.554857</td>\n",
-       "      <td>85.313150</td>\n",
-       "      <td>-0.216607</td>\n",
-       "      <td>-0.199792</td>\n",
-       "      <td>-1.593260</td>\n",
-       "      <td>4.113683</td>\n",
-       "      <td>-5.706943</td>\n",
-       "      <td>2.063296</td>\n",
-       "      <td>0.525908</td>\n",
+       "      <td>88.374317</td>\n",
+       "      <td>443.932024</td>\n",
+       "      <td>65.597483</td>\n",
+       "      <td>83.688548</td>\n",
+       "      <td>59.132934</td>\n",
+       "      <td>118.467958</td>\n",
+       "      <td>136.112027</td>\n",
+       "      <td>-0.798966</td>\n",
+       "      <td>0.035543</td>\n",
+       "      <td>1.513928</td>\n",
+       "      <td>-1.826767</td>\n",
+       "      <td>3.340696</td>\n",
+       "      <td>1.499711</td>\n",
+       "      <td>-0.10225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>92.805405</td>\n",
-       "      <td>732.812606</td>\n",
-       "      <td>90.881102</td>\n",
-       "      <td>22.378353</td>\n",
-       "      <td>233.302256</td>\n",
-       "      <td>268.592720</td>\n",
-       "      <td>104.814634</td>\n",
-       "      <td>1.747504</td>\n",
-       "      <td>0.111492</td>\n",
-       "      <td>2.229235</td>\n",
-       "      <td>0.346242</td>\n",
-       "      <td>1.882993</td>\n",
-       "      <td>2.744728</td>\n",
-       "      <td>0.525908</td>\n",
+       "      <td>91.905279</td>\n",
+       "      <td>509.985711</td>\n",
+       "      <td>109.586030</td>\n",
+       "      <td>44.059127</td>\n",
+       "      <td>166.110295</td>\n",
+       "      <td>250.280191</td>\n",
+       "      <td>140.166951</td>\n",
+       "      <td>-1.009533</td>\n",
+       "      <td>-0.079460</td>\n",
+       "      <td>-1.132555</td>\n",
+       "      <td>0.332320</td>\n",
+       "      <td>-1.464875</td>\n",
+       "      <td>2.584731</td>\n",
+       "      <td>-0.10225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>89.975393</td>\n",
-       "      <td>540.147829</td>\n",
-       "      <td>68.022582</td>\n",
-       "      <td>49.693719</td>\n",
-       "      <td>172.316059</td>\n",
-       "      <td>118.034701</td>\n",
-       "      <td>93.485945</td>\n",
-       "      <td>0.126138</td>\n",
-       "      <td>1.033327</td>\n",
-       "      <td>-0.842621</td>\n",
-       "      <td>1.687083</td>\n",
-       "      <td>-2.529704</td>\n",
-       "      <td>2.601356</td>\n",
-       "      <td>0.525908</td>\n",
+       "      <td>63.578634</td>\n",
+       "      <td>1238.938688</td>\n",
+       "      <td>15.466064</td>\n",
+       "      <td>116.071958</td>\n",
+       "      <td>32.671507</td>\n",
+       "      <td>123.273635</td>\n",
+       "      <td>115.495962</td>\n",
+       "      <td>0.059070</td>\n",
+       "      <td>-0.150732</td>\n",
+       "      <td>3.753815</td>\n",
+       "      <td>-2.187382</td>\n",
+       "      <td>5.941197</td>\n",
+       "      <td>-1.942350</td>\n",
+       "      <td>-0.10225</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -267,28 +267,28 @@
       ],
       "text/plain": [
        "        m_ll         m_jj       pt_l1       pt_l2       pt_j1       pt_j2  \\\n",
-       "0  91.635210   667.722780   76.915838   70.168638   79.861451  114.119794   \n",
-       "1  96.278517  2420.868329  122.669099   33.745498  208.670392  330.818190   \n",
-       "2  93.136842  1354.262005   24.359742  101.941891   94.105585   64.554857   \n",
-       "3  92.805405   732.812606   90.881102   22.378353  233.302256  268.592720   \n",
-       "4  89.975393   540.147829   68.022582   49.693719  172.316059  118.034701   \n",
+       "0  97.301623   943.361573  108.569643   20.778174   75.506760   44.107703   \n",
+       "1  90.418983  2289.163457   54.811763   69.057975   68.944994   83.776263   \n",
+       "2  88.374317   443.932024   65.597483   83.688548   59.132934  118.467958   \n",
+       "3  91.905279   509.985711  109.586030   44.059127  166.110295  250.280191   \n",
+       "4  63.578634  1238.938688   15.466064  116.071958   32.671507  123.273635   \n",
        "\n",
        "        pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
-       "0  116.217132  1.229191  1.006156  3.575737 -0.300728      3.876465   \n",
-       "1  145.454612  0.829505  1.967168  2.528491 -1.890051      4.418542   \n",
-       "2   85.313150 -0.216607 -0.199792 -1.593260  4.113683     -5.706943   \n",
-       "3  104.814634  1.747504  0.111492  2.229235  0.346242      1.882993   \n",
-       "4   93.485945  0.126138  1.033327 -0.842621  1.687083     -2.529704   \n",
+       "0   90.782239  0.795077  1.442213  3.308059 -2.280637      5.588697   \n",
+       "1   87.922188 -0.366088  0.016954 -2.883546  3.926106     -6.809652   \n",
+       "2  136.112027 -0.798966  0.035543  1.513928 -1.826767      3.340696   \n",
+       "3  140.166951 -1.009533 -0.079460 -1.132555  0.332320     -1.464875   \n",
+       "4  115.495962  0.059070 -0.150732  3.753815 -2.187382      5.941197   \n",
        "\n",
        "   delta_phi_jj  cross_section_weight  \n",
-       "0     -1.900115              0.525908  \n",
-       "1     -2.839869              0.525908  \n",
-       "2      2.063296              0.525908  \n",
-       "3      2.744728              0.525908  \n",
-       "4      2.601356              0.525908  "
+       "0      1.481401               0.10225  \n",
+       "1     -1.928219               0.10225  \n",
+       "2      1.499711              -0.10225  \n",
+       "3      2.584731              -0.10225  \n",
+       "4     -1.942350              -0.10225  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv(\"./data/SM_10k.csv\", index=False)"
+    "dataset.to_csv(\"./data/cHDD_1_10k.csv\", index=False)"
    ]
   }
  ],
