--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of events: 10000\n"
+      "Number of events: 1000000\n"
      ]
     }
    ],
    "source": [
-    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-cHDD-1/Events/run_01/unweighted_events.lhe.gz\"\n",
+    "lhe_file = \"/users/eleves-b/2022/baptiste.barthe-gold/Documents/Comput_HEP/MG5_aMC_v2_9_22/VBF-SM/Events/run_03/unweighted_events.lhe.gz\"\n",
     "events = pylhe.read_lhe_with_attributes(lhe_file)\n",
     "nevents = pylhe.read_num_events(lhe_file)\n",
     "print(f\"Number of events: {nevents}\")"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -178,117 +178,117 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>97.301623</td>\n",
-       "      <td>943.361573</td>\n",
-       "      <td>108.569643</td>\n",
-       "      <td>20.778174</td>\n",
-       "      <td>75.506760</td>\n",
-       "      <td>44.107703</td>\n",
-       "      <td>90.782239</td>\n",
-       "      <td>0.795077</td>\n",
-       "      <td>1.442213</td>\n",
-       "      <td>3.308059</td>\n",
-       "      <td>-2.280637</td>\n",
-       "      <td>5.588697</td>\n",
-       "      <td>1.481401</td>\n",
-       "      <td>0.10225</td>\n",
+       "      <td>90.938873</td>\n",
+       "      <td>1320.759767</td>\n",
+       "      <td>18.501130</td>\n",
+       "      <td>108.940012</td>\n",
+       "      <td>165.143625</td>\n",
+       "      <td>224.543108</td>\n",
+       "      <td>92.948434</td>\n",
+       "      <td>-2.045111</td>\n",
+       "      <td>-1.477061</td>\n",
+       "      <td>-2.477165</td>\n",
+       "      <td>1.332997</td>\n",
+       "      <td>-3.810161</td>\n",
+       "      <td>-2.768168</td>\n",
+       "      <td>0.527857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>90.418983</td>\n",
-       "      <td>2289.163457</td>\n",
-       "      <td>54.811763</td>\n",
-       "      <td>69.057975</td>\n",
-       "      <td>68.944994</td>\n",
-       "      <td>83.776263</td>\n",
-       "      <td>87.922188</td>\n",
-       "      <td>-0.366088</td>\n",
-       "      <td>0.016954</td>\n",
-       "      <td>-2.883546</td>\n",
-       "      <td>3.926106</td>\n",
-       "      <td>-6.809652</td>\n",
-       "      <td>-1.928219</td>\n",
-       "      <td>0.10225</td>\n",
+       "      <td>91.622728</td>\n",
+       "      <td>1099.756185</td>\n",
+       "      <td>19.093080</td>\n",
+       "      <td>42.145445</td>\n",
+       "      <td>37.307309</td>\n",
+       "      <td>57.351497</td>\n",
+       "      <td>26.003542</td>\n",
+       "      <td>-0.715597</td>\n",
+       "      <td>1.423819</td>\n",
+       "      <td>4.262686</td>\n",
+       "      <td>-2.071294</td>\n",
+       "      <td>6.333979</td>\n",
+       "      <td>2.781526</td>\n",
+       "      <td>0.527857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>88.374317</td>\n",
-       "      <td>443.932024</td>\n",
-       "      <td>65.597483</td>\n",
-       "      <td>83.688548</td>\n",
-       "      <td>59.132934</td>\n",
-       "      <td>118.467958</td>\n",
-       "      <td>136.112027</td>\n",
-       "      <td>-0.798966</td>\n",
-       "      <td>0.035543</td>\n",
-       "      <td>1.513928</td>\n",
-       "      <td>-1.826767</td>\n",
-       "      <td>3.340696</td>\n",
-       "      <td>1.499711</td>\n",
-       "      <td>-0.10225</td>\n",
+       "      <td>91.546678</td>\n",
+       "      <td>574.233489</td>\n",
+       "      <td>41.314703</td>\n",
+       "      <td>78.776068</td>\n",
+       "      <td>296.748905</td>\n",
+       "      <td>187.341859</td>\n",
+       "      <td>116.442200</td>\n",
+       "      <td>1.365869</td>\n",
+       "      <td>-0.036253</td>\n",
+       "      <td>1.810564</td>\n",
+       "      <td>0.505253</td>\n",
+       "      <td>1.305311</td>\n",
+       "      <td>2.972333</td>\n",
+       "      <td>0.527857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>91.905279</td>\n",
-       "      <td>509.985711</td>\n",
-       "      <td>109.586030</td>\n",
-       "      <td>44.059127</td>\n",
-       "      <td>166.110295</td>\n",
-       "      <td>250.280191</td>\n",
-       "      <td>140.166951</td>\n",
-       "      <td>-1.009533</td>\n",
-       "      <td>-0.079460</td>\n",
-       "      <td>-1.132555</td>\n",
-       "      <td>0.332320</td>\n",
-       "      <td>-1.464875</td>\n",
-       "      <td>2.584731</td>\n",
-       "      <td>-0.10225</td>\n",
+       "      <td>51.053900</td>\n",
+       "      <td>655.930144</td>\n",
+       "      <td>40.471741</td>\n",
+       "      <td>21.911851</td>\n",
+       "      <td>29.452497</td>\n",
+       "      <td>22.273754</td>\n",
+       "      <td>35.907856</td>\n",
+       "      <td>-0.439658</td>\n",
+       "      <td>-0.508154</td>\n",
+       "      <td>-2.640945</td>\n",
+       "      <td>3.844801</td>\n",
+       "      <td>-6.485746</td>\n",
+       "      <td>4.655809</td>\n",
+       "      <td>0.527857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>63.578634</td>\n",
-       "      <td>1238.938688</td>\n",
-       "      <td>15.466064</td>\n",
-       "      <td>116.071958</td>\n",
-       "      <td>32.671507</td>\n",
-       "      <td>123.273635</td>\n",
-       "      <td>115.495962</td>\n",
-       "      <td>0.059070</td>\n",
-       "      <td>-0.150732</td>\n",
-       "      <td>3.753815</td>\n",
-       "      <td>-2.187382</td>\n",
-       "      <td>5.941197</td>\n",
-       "      <td>-1.942350</td>\n",
-       "      <td>-0.10225</td>\n",
+       "      <td>84.444257</td>\n",
+       "      <td>435.958587</td>\n",
+       "      <td>53.707544</td>\n",
+       "      <td>34.096012</td>\n",
+       "      <td>154.048253</td>\n",
+       "      <td>155.497416</td>\n",
+       "      <td>25.782279</td>\n",
+       "      <td>1.616180</td>\n",
+       "      <td>1.832586</td>\n",
+       "      <td>0.094417</td>\n",
+       "      <td>1.850422</td>\n",
+       "      <td>-1.756005</td>\n",
+       "      <td>3.308105</td>\n",
+       "      <td>0.527857</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        m_ll         m_jj       pt_l1       pt_l2       pt_j1       pt_j2  \\\n",
-       "0  97.301623   943.361573  108.569643   20.778174   75.506760   44.107703   \n",
-       "1  90.418983  2289.163457   54.811763   69.057975   68.944994   83.776263   \n",
-       "2  88.374317   443.932024   65.597483   83.688548   59.132934  118.467958   \n",
-       "3  91.905279   509.985711  109.586030   44.059127  166.110295  250.280191   \n",
-       "4  63.578634  1238.938688   15.466064  116.071958   32.671507  123.273635   \n",
+       "        m_ll         m_jj      pt_l1       pt_l2       pt_j1       pt_j2  \\\n",
+       "0  90.938873  1320.759767  18.501130  108.940012  165.143625  224.543108   \n",
+       "1  91.622728  1099.756185  19.093080   42.145445   37.307309   57.351497   \n",
+       "2  91.546678   574.233489  41.314703   78.776068  296.748905  187.341859   \n",
+       "3  51.053900   655.930144  40.471741   21.911851   29.452497   22.273754   \n",
+       "4  84.444257   435.958587  53.707544   34.096012  154.048253  155.497416   \n",
        "\n",
        "        pt_ll    eta_l1    eta_l2    eta_j1    eta_j2  delta_eta_jj  \\\n",
-       "0   90.782239  0.795077  1.442213  3.308059 -2.280637      5.588697   \n",
-       "1   87.922188 -0.366088  0.016954 -2.883546  3.926106     -6.809652   \n",
-       "2  136.112027 -0.798966  0.035543  1.513928 -1.826767      3.340696   \n",
-       "3  140.166951 -1.009533 -0.079460 -1.132555  0.332320     -1.464875   \n",
-       "4  115.495962  0.059070 -0.150732  3.753815 -2.187382      5.941197   \n",
+       "0   92.948434 -2.045111 -1.477061 -2.477165  1.332997     -3.810161   \n",
+       "1   26.003542 -0.715597  1.423819  4.262686 -2.071294      6.333979   \n",
+       "2  116.442200  1.365869 -0.036253  1.810564  0.505253      1.305311   \n",
+       "3   35.907856 -0.439658 -0.508154 -2.640945  3.844801     -6.485746   \n",
+       "4   25.782279  1.616180  1.832586  0.094417  1.850422     -1.756005   \n",
        "\n",
        "   delta_phi_jj  cross_section_weight  \n",
-       "0      1.481401               0.10225  \n",
-       "1     -1.928219               0.10225  \n",
-       "2      1.499711              -0.10225  \n",
-       "3      2.584731              -0.10225  \n",
-       "4     -1.942350              -0.10225  "
+       "0     -2.768168              0.527857  \n",
+       "1      2.781526              0.527857  \n",
+       "2      2.972333              0.527857  \n",
+       "3      4.655809              0.527857  \n",
+       "4      3.308105              0.527857  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv(\"./data/cHDD_1_10k.csv\", index=False)"
+    "dataset.to_csv(\"./data/cHDD_1_1M.csv\", index=False)"
    ]
   }
  ],
